--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "token": "OTQ1MDE1MDA3NjUxOTc1MjI4.YhJ_zw.vLVlTH6WaudtT6tDtdgO4kEwRw8",
-    "prefix": "!",
-    "mongooseConnectionString": "",
+    "prefix": "/",
+    "mongooseConnectionString": "mongodb://mongo:bNanCgEGW46c8CGzaHDd@containers-us-west-30.railway.app:7576",
     "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=945015007651975228&permissions=8&scope=bot%20applications.commands",
     "tick": "✅",
     "cross": "🚫",
