--- a/config.json
+++ b/config.json
@@ -1,9 +1,11 @@
 {
-    "token": "OTQ1MDE1MDA3NjUxOTc1MjI4.YhJ_zw.vLVlTH6WaudtT6tDtdgO4kEwRw8",
-    "prefix": "/",
-    "mongooseConnectionString": "mongodb://mongo:bNanCgEGW46c8CGzaHDd@containers-us-west-30.railway.app:7576",
+    "token": "",
+    "prefix": "!",
+    "mongooseConnectionString": "mongodb+srv://user:pass@cluster0.vfoia.mongodb.net/test",
     "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=945015007651975228&permissions=8&scope=bot%20applications.commands",
     "tick": "✅",
     "cross": "🚫",
+    "success": "✅",
+    "error": "🚫",
     "color": "#008D5A"
 }
