--- a/config.json
+++ b/config.json
@@ -1,11 +1,13 @@
 {
-    "token": "",
-    "prefix": "!",
-    "mongooseConnectionString": "mongodb+srv://user:pass@cluster0.vfoia.mongodb.net/test",
-    "inviteURL": "https://discord.com/api/oauth2/authorize?client_id=945015007651975228&permissions=8&scope=bot%20applications.commands",
-    "tick": "✅",
-    "cross": "🚫",
-    "success": "✅",
-    "error": "🚫",
-    "color": "#008D5A"
+  "token": "INVALID_TOKEN",
+  "prefix": "#",
+  "mongooseConnectionString": "",
+  "inviteURL": "",
+  "supportURL": "",
+  "tick": "✅",
+  "cross": "🚫",
+  "success": "✅",
+  "error": "🚫",
+  "color": "#524DFF",
+  "ownerID": "929009383826948186"
 }
